# digital-twin

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  decision_record.yml  research_task.yml
.github/workflows/: ci.yml
apps/web/: DESIGN.md  PRODUCT.md  README.md  package.json  vite.config.ts
data/: README.md
docs/: architecture.md  component-inventory.md  evaluation-architecture.md  evaluation-data-flow-and-threat-model.md  github-project.md  live-generation.md  local-ingestion.md  local-retrieval.md  onboarding-prototype.md  privacy-and-ethics.md  project-brief.md  quality-and-learning-plan.md  rag-and-llm-benchmarking.md
docs/agents/: README.md  (+7 more)
experiments/: README.md
notebooks/: README.md
references/: README.md
reports/: README.md  claim-to-evidence-matrix.md  issue-5-professor-demo.md  issue-6-professor-feedback.md
research/: README.md
scripts/: README.md  analyze_it5002_rapid_result.py  benchmark_evidence_sufficiency.py  benchmark_retrieval.py  build_it5002_rapid_dataset.py  evaluate_generation.py  evaluate_retrieval.py  it5002_rapid_common.py  run_it5002_retrieval_rapid.py  synthetic_course_corpus.py  validate_component_profile.py  validate_course_tutor_dataset.py  validate_evaluation_instruments.py  validate_evaluation_results.py  validate_markdown_links.py  validate_retrieval_v3_instruments.py  verify_local_ingestion.py
services/: __init__.py
src/: README.md
tests/: README.md  test_analyze_it5002_rapid_result.py  test_scaffold.py
(+198 files in other folders)
