[project]
name = "digital-twin"
version = "0.1.0"
description = "Research and prototype workspace for an instructor digital twin teaching system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=1.0,<2.0",
  "litellm>=1.0,<2.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
